tests/baselines/reference/parserConstructorDeclaration2.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration2.ts (1 errors) ====
    class C {
      static constructor() { }
      ~~~~~~
!!! parserConstructorDeclaration2.ts(2,3): error TS1089: 'static' modifier cannot appear on a constructor declaration.
    }